--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/(https://souvinerbooking-34sxazfmg-adnan-alam-s-projects.vercel.app/)", "destination": "/" }
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
